<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_bg"
    android:padding="@dimen/spacing_xlarge">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:accessibilityHeading="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxlarge"
            android:text="@string/register_title"
            android:textColor="@color/purple_main"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxlarge"
            android:background="@drawable/light_card_bg"
            android:hint="@string/hint_full_name"
            android:inputType="textPersonName"
            android:padding="@dimen/spacing_large" />

        <EditText
            android:id="@+id/inputPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:background="@drawable/light_card_bg"
            android:hint="@string/hint_phone_number"
            android:inputType="phone"
            android:padding="@dimen/spacing_large" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:background="@drawable/light_card_bg"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/spacing_large" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:background="@drawable/light_card_bg"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="@dimen/spacing_large" />

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:backgroundTint="@color/purple_main"
            android:text="@string/button_create_account"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>
