<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/spacing_20"
    android:paddingTop="@dimen/spacing_medium"
    android:paddingEnd="@dimen/spacing_20"
    android:paddingBottom="@dimen/spacing_xsmall">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_edit_profile_description"
        android:textColor="@color/gray_dark"
        android:textSize="@dimen/small_text_size" />

    <EditText
        android:id="@+id/inputProfileFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:hint="@string/dialog_edit_profile_name_hint"
        android:inputType="textPersonName|textCapWords"
        android:maxLines="1" />

    <EditText
        android:id="@+id/inputProfilePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/dialog_edit_profile_phone_hint"
        android:inputType="phone"
        android:maxLines="1" />

</LinearLayout>
