<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/spacing_20"
    android:paddingTop="@dimen/spacing_medium"
    android:paddingEnd="@dimen/spacing_20"
    android:paddingBottom="@dimen/spacing_xsmall">

    <TextView
        android:id="@+id/txtDialogDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_new_racha_description"
        android:textColor="@color/gray_dark"
        android:textSize="@dimen/small_text_size" />

    <AutoCompleteTextView
        android:id="@+id/inputRachaNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:completionThreshold="0"
        android:hint="@string/dialog_new_racha_name_hint"
        android:inputType="textCapSentences"
        android:maxLines="1" />

    <EditText
        android:id="@+id/inputRachaIcono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/dialog_new_racha_icon_hint"
        android:inputType="text"
        android:maxLength="4"
        android:maxLines="1" />

</LinearLayout>
